tests/error/unclosed_comment.stderr
error: Unclosed comment
   --> tests/error/unclosed_comment.nx:3:3
  |
3 |   /*
  |   ^^

